[gd_scene load_steps=3 format=3 uid="uid://d3hgu5j365k16"]

[ext_resource type="Script" uid="uid://ci8sog1durcfk" path="res://scripts/main_scene/result_scene.gd" id="1_jyvm4"]
[ext_resource type="Texture2D" uid="uid://0t0hbhbeny6y" path="res://asserts/sprites/bg_natural_umi.jpg" id="2_oaq04"]

[node name="ResultScene" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -575.0
offset_top = -323.5
offset_right = 575.0
offset_bottom = 323.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jyvm4")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -578.0
offset_top = -327.0
offset_right = 579.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_oaq04")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -575.0
offset_top = -323.0
offset_right = 575.0
offset_bottom = 323.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2

[node name="ResultLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 73)
layout_mode = 2
theme_override_colors/font_color = Color(0.109804, 0.121569, 0.239216, 1)
theme_override_font_sizes/font_size = 25
text = "海豹
吃豹飽"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 83)
layout_mode = 2
theme_override_colors/font_color = Color(0.109804, 0.121569, 0.239216, 1)
theme_override_font_sizes/font_size = 60
text = "海豹吃豹飽"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.109804, 0.121569, 0.239216, 1)
theme_override_font_sizes/font_size = 40
text = "Score：0"
horizontal_alignment = 1

[node name="Control3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 35
text = " Restart "

[node name="TitleButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
text = " Back to title "

[node name="ExitButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
text = " Exit "

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TitleButton" to="." method="_on_title_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
